fix type directive alignment to center

--- a/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_confirm_wrapper.css
+++ b/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_confirm_wrapper.css
@@ -4,4 +4,6 @@
 .answer_confirm_wrapper {
   display: flex;
   flex-direction: column;
+  position: relative;
+  width: 100%;
 }
