--- a/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/type_directive/type_directive.css
+++ b/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/type_directive/type_directive.css
@@ -2,4 +2,5 @@
   padding: 0.5em 0em;
   font-size: 0.8em;
   position: absolute;
+  align-self: center;
 }
